--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,7 +18,7 @@ html ::-webkit-scrollbar {
 body ::selection,
 html ::selection {
   color: $color-white;
-  background-color: $color-green-blue;
+  background-color: $color-ube;
 }
 
 a {
