--- a/src/components/SocialMediaBadge/SocialMediaBadge.module.scss
+++ b/src/components/SocialMediaBadge/SocialMediaBadge.module.scss
@@ -2,7 +2,7 @@
 
 .base {
   border-radius: 10px;
-  transition: transform 250ms, background 250ms;
+  transition: transform 250ms, box-shadow 250ms;
   background-color: $color-chinese-black;
   color: $color-white;
   font-size: $font-size-10;
@@ -37,15 +37,15 @@
     transform: translateY(-0.5rem);
 
     &:nth-child(1) {
-      background-color: $color-crystal;
+      box-shadow: 0px 0.5rem 0px 0px $color-crystal;
     }
 
     &:nth-child(2) {
-      background-color: $color-dark-cerulean;
+      box-shadow: 0px 0.5rem 0px 0px $color-dark-cerulean;
     }
 
     &:nth-child(3) {
-      background-color: $color-green-blue;
+      box-shadow: 0px 0.5rem 0px 0px $color-green-blue;
     }
   }
 
