adjust some stuff

--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -6,6 +6,8 @@
   margin: 0 1rem 0 0;
   width: 3rem;
 
+  user-select: none;
+
   @include media-from(xs) {
     margin: 0 2rem 0 0;
     width: 5rem;
