--- a/src/components/SocialMediaBadge/SocialMediaBadge.module.scss
+++ b/src/components/SocialMediaBadge/SocialMediaBadge.module.scss
@@ -13,6 +13,7 @@
   align-items: center;
   padding: 1rem;
   margin: 0 1rem 1rem 0;
+  user-select: none;
 
   @include media-to(xs) {
     width: calc(50vw - 7rem / 2);
